# generative-ai-projects

./: readme.txt
01-streamlit-simple-chatbot/: .env_bak  app.py
02-chatbot-chat_completions/: app.py  model.py
03-chatbot-chat_completions-stream/: app.py  model.py
04-chatbot-financial_analyst-calling_function/: app.py  model.py
05-chatbot-assistants_function_calling/: model.py
05-chatbot-in/: app.py
06-streamlit-fastapi/: database.py  main.py  streamlit_client.py
07-todo-nextjs-fastapi/: next.config.js  package-lock.json  package.json  tailwind.config.ts
07-todo-nextjs-fastapi/src/api/: database.py  index.py
07-todo-nextjs-fastapi/src/app/: layout.tsx  page.tsx  providers.tsx
07-todo-nextjs-fastapi/src/store/: todo.ts
07-todo-nextjs-fastapi/src/types/: todo.tsx
11-todo-fastapi-poetry-sqlmodel/: README.md  pyproject.toml
11-todo-fastapi-poetry-sqlmodel/tests/: test_main.py
11-todo-fastapi-poetry-sqlmodel/todo_app/: main.py
12-fastapi-poetry-docker/: Dockerfile.dev  README.md  pyproject.toml
12-fastapi-poetry-docker/12_fastapi_poetry_docker/: main.py
13-nextjs-dashboard/: auth.ts  package-lock.json  package.json
13-nextjs-dashboard/app/: layout.tsx  page.tsx
13-nextjs-dashboard/app/lib/: actions.ts  data.ts
13-nextjs-dashboard/app/ui/: fonts.ts  login-form.tsx  search.tsx
13-nextjs-dashboard/scripts/: seed.js
14-fastapi-docker-kafka-template/: readme.md
14-fastapi-docker-kafka-template/todo/app/: main.py
16-nextjs-docker/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
(+26 files in other folders)
