[tool.poetry]
name = "12-fastapi-poetry-docker"
version = "0.1.0"
description = ""
authors = ["Abdul Manan <abdulmanan@pitb.gov.pk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
